newsletter forrm working

--- a/src/App.css
+++ b/src/App.css
@@ -640,3 +640,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 #contact-submit {
   border-radius: 10px;
 }
+
+.external_link {
+  font-weight: 400;
+  color: #fff !important;
+  letter-spacing: 0.8px;
+  padding: 0 25px;
+  font-size: 18px;
+  opacity: 0.75;
+}
